--- a/css/ccsingup.css
+++ b/css/ccsingup.css
@@ -1,3 +1,4 @@
+/* @Constant Contact Email Singup - Stylesheet */
 .widget_constantcontact_widget, .css_widget{list-style-type: none;max-width:319px;width:100%;}
 .widget_constantcontact_widget .widgettitle, .css_widget .widgettitle{font-size:24px;text-align: center;}
 .ctct-custom-form{width:100%;font-size:12px;line-height:1.5em;}
